fixed positioning of the header in footer and aligned footer logo correctly

--- a/sprint-1/stylesheets/sass/main.scss
+++ b/sprint-1/stylesheets/sass/main.scss
@@ -234,7 +234,7 @@ html {
         }
     }
 
-    &__header {
+    &__heading {
         font-size: 2.5rem;
     }
 
@@ -252,11 +252,17 @@ html {
     @include tablet {
         &__header,
         .icon {
-            display: inline-block;
+            display: flex;
         }
 
         &__wrapper{
             flex-direction: row;
+
+            &--outer {
+                @include flex-container;
+                justify-content: space-between;
+                align-items: baseline;
+            }
         }
 
         .icon {
